sfSandBoxCode/force-app/main/default/objects/Swift_Endline_Survey__c/Swift_Endline_Survey__c.object-meta.xml
<CustomObject>
    <label>Swift Endline Survey</label>
    <nameField>
        <label>Swift Endline Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Swift Endline Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>