sfSandBoxCode/force-app/main/default/objects/Swift_Endline_Survey__c/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <description>Be free to change the size</description>
    <formula>Photo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image</label>
    <type>Text</type>
</CustomField>