sfSandBoxCode/force-app/main/default/objects/Swift_Endline_Survey__c/fields/is_soap_provided_at_FLT__c.field-meta.xml
<CustomField>
    <fullName>is_soap_provided_at_FLT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is soap provided at FLT</label>
    <type>Checkbox</type>
</CustomField>