sfSandBoxCode/force-app/main/default/objects/Swift_Endline_Survey__c/fields/is_there_a_hand_wash_station__c.field-meta.xml
<CustomField>
    <fullName>is_there_a_hand_wash_station__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is there a hand wash station</label>
    <type>Checkbox</type>
</CustomField>