sfSandBoxCode/force-app/main/default/objects/Swift_Endline_Survey__c/fields/is_there_hand_wash_provided__c.field-meta.xml
<CustomField>
    <fullName>is_there_hand_wash_provided__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is there hand wash provided</label>
    <type>Checkbox</type>
</CustomField>