sfSandBoxCode/force-app/main/default/objects/Swift_Endline_Survey__c/fields/is_water_provided_in_the_station__c.field-meta.xml
<CustomField>
    <fullName>is_water_provided_in_the_station__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is water provided in the station</label>
    <type>Checkbox</type>
</CustomField>