sfSandBoxCode/force-app/main/default/objects/Swift_Endline_Survey__c/fields/Latitude__c.field-meta.xml
<CustomField>
    <fullName>Latitude__c</fullName>
    <formula>Toilets__r.Location__r.GPS_Latitude__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latitude</label>
    <precision>18</precision>
    <scale>14</scale>
    <type>Number</type>
</CustomField>