sfSandBoxCode/force-app/main/default/objects/Swift_Endline_Survey__c/fields/Longitude__c.field-meta.xml
<CustomField>
    <fullName>Longitude__c</fullName>
    <formula>Toilets__r.Location__r.GPS_Longitude__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Longitude</label>
    <precision>18</precision>
    <scale>14</scale>
    <type>Number</type>
</CustomField>