sfSandBoxCode/force-app/main/default/objects/Swift_Endline_Survey__c/fields/Please__c.field-meta.xml
<CustomField>
    <fullName>Please__c</fullName>
    <label>Please select name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>