sfSandBoxCode/force-app/main/default/objects/Swift_Endline_Survey__c/fields/Toilets__c.field-meta.xml
<CustomField>
    <fullName>Toilets__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Toilet</label>
    <referenceTo>Toilet__c</referenceTo>
    <relationshipLabel>Swift Endline Surveys</relationshipLabel>
    <relationshipName>Swift_Endline_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>