sfSandBoxCode/force-app/main/default/objects/Swift_Endline_Survey__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Toilets__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Toilets__c</field>
        <operation>equals</operation>
    </filters>
    <label>All</label>
    <language>en_US</language>
</ListView>